# OSLabs

./: .gitignore  CMakeLists.txt
.devcontainer/: Dockerfile  devcontainer.json
lab1/: CMakeLists.txt  README.md  main.cpp
lab1/include/: parent.hpp  utils.hpp
lab1/src/: child1.cpp  child2.cpp  parent.cpp  utils.cpp
lab2/: CMakeLists.txt  main.cpp  points.txt  set_env_vars.fish  set_env_vars.sh
lab2/include/: utils.hpp
lab2/research/: find_time.cpp  points.txt  results.txt  visualization.py
lab2/src/: utils.cpp
lab3/: CMakeLists.txt  set_env_vars.fish  set_env_vars.sh
lab3/include/: parent.hpp  utils.hpp
lab3/src/: child1.cpp  child2.cpp  parent.cpp  utils.cpp
lab4/: CMakeLists.txt  Makefile
lab4/lib/: lib1.h  lib2.h
lab4/src/: lib1.c  lib2.c  main_dynamic.c  main_static.c
lab4_1/lib/: lib2.h
lab4_1/src/: lib2.c  main_dynamic.c  main_static.c
tests/: CMakeLists.txt  lab1_test.cpp  lab2_test.cpp  lab3_test.cpp
tests/lab2_test_data/: lab2_input.txt  lab2_output.txt
